--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "clean": "rm -rf coverage lib es dist",
     "build:cjs": "BABEL_ENV=commonjs babel src --out-dir lib",
     "build:es": "babel src --out-dir es",
-    "build": "npm run build:cjs && npm run build:es",
+    "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/redux-fluorine.js",
+    "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/redux-fluorine.min.js",
+    "build": "npm run build:cjs && npm run build:es && npm run build:umd && npm run build:umd:min",
     "prepublish": "npm run clean && npm run build",
     "preversion": "npm run clean && npm run test",
     "version": "npm run build",
@@ -56,7 +58,7 @@
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-eslint": "^6.1.0",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.2.5",
     "babel-plugin-closure-elimination": "^1.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.10.3",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
@@ -65,6 +67,7 @@
     "babel-preset-philpl": "^0.1.0",
     "babel-register": "^6.9.0",
     "coveralls": "^2.11.11",
+    "cross-env": "^3.0.0",
     "eslint": "^3.0.1",
     "eslint-config-excellence": "^1.14.0",
     "eslint-plugin-mocha": "^4.5.1",
@@ -75,7 +78,7 @@
     "nyc": "^7.0.0",
     "redux": "^3.6.0",
     "rxjs": "^5.0.0-beta.12",
-    "webpack": "^2.1.0-beta.13"
+    "webpack": "^2.1.0-beta.25"
   },
   "peerDependencies": {
     "redux": "3.*"
