Remove babel-runtime and prepare for eventual lodash use
Babel Runtime is really have and leaves a lot of traces around.
It is removed for now in favour for babel's inline polyfills.

Lodash can be used for some things in the future and the setup would
be ready for it now.

--- a/.babelrc
+++ b/.babelrc
@@ -6,15 +6,17 @@
     "/node_modules/"
   ],
   "plugins": [
-    "transform-runtime",
-    "transform-react-constant-elements",
-    "transform-react-inline-elements",
     "closure-elimination"
   ],
   env: {
-    commonjs: {
+    cjs: {
       plugins: [
         "transform-es2015-modules-commonjs"
+      ]
+    },
+    es: {
+      plugins: [
+        "./scripts/babel-use-lodash-es"
       ]
     }
   }
