--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
     "lint": "eslint src",
     "clean": "rm -rf coverage lib es dist",
-    "build:cjs": "BABEL_ENV=commonjs babel src --out-dir lib",
+    "build:cjs": "BABEL_ENV=cjs babel src --out-dir lib",
     "build:es": "babel src --out-dir es",
     "build:umd": "cross-env NODE_ENV=development webpack src/index.js dist/redux-fluorine.js",
     "build:umd:min": "cross-env NODE_ENV=production webpack src/index.js dist/redux-fluorine.min.js",
