Upgrade babel-core, remove closure-elimination, use yarn

--- a/.babelrc
+++ b/.babelrc
@@ -5,9 +5,7 @@
   "ignore": [
     "/node_modules/"
   ],
-  "plugins": [
-    "closure-elimination"
-  ],
+  "plugins": [],
   env: {
     cjs: {
       plugins: [
