--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
 language: node_js
 node_js:
-  - 5
-  - 6
+  - "6"
+before_install:
+  - sudo apt-key adv --keyserver pgp.mit.edu --recv D101F7899D41F3C3
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+install:
+  - yarn install
 script:
-  - npm run build
-  - npm run lint
-  - npm run test
+  - yarn run build
+  - yarn run lint
+  - yarn run test
 after_success:
   - npm run test:cov
 cache:
   directories:
-    - node_modules
+    - $HOME/.yarn-cache
