--- a/package.json
+++ b/package.json
@@ -52,13 +52,13 @@
     "agenda"
   ],
   "dependencies": {
+    "babel-core": "^6.18.2",
     "symbol-observable": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
-    "babel-plugin-closure-elimination": "^1.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.16.0",
     "babel-preset-philpl": "^0.4.0",
     "babel-register": "^6.16.0",
